--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -40,6 +40,7 @@ p {
   height: 50px;
   background-color: #cccccc;
   display: flex;
+  justify-content: space-between;
   border-radius: 3px;
   align-items: center;
   padding: 0 20px;
@@ -52,7 +53,13 @@ p {
   font-weight: bold;
 }
 
-.navbar ul {
+.navbar .navbar-links {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.navbar .navbar-links ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -60,30 +67,44 @@ p {
   margin-left: 20px;
 }
 
-.navbar ul li {
+.navbar .navbar-links ul li {
   margin: 0 15px;
 }
 
-.navbar ul li a {
+.navbar .navbar-links ul li a {
   text-decoration: underline;
   color: #888888;
   font-size: 16px;
   transition: color 0.3s;
 }
 
-.navbar ul li a:hover {
+.navbar .navbar-links ul li a:hover {
   color: #ffffff;
 }
 
-.navbar li a.active {
+.navbar .navbar-links li a.active {
   text-decoration: none;
   color: #666666;
   font-weight: bold;
 }
 
-.navbar li a.active:hover {
+.navbar .navbar-links li a.active:hover {
   color: #666666;
   cursor: default;
+}
+
+.navbar .navbar-user {
+  font-size: 0.9em;
+}
+.navbar .navbar-user a {
+  text-decoration: underline;
+  cursor: pointer;
+  color: #888888;
+}
+.navbar .navbar-user a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  color: #ffffff;
 }
 
 /* Content styling */
